services/downloads-standard/sabnzbd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd-standard
  namespace: downloads-standard
spec:
  type: ClusterIP
  selector:
    app: sabnzbd-standard
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
