services/downloads-standard/sabnzbd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd-standard
  namespace: downloads-standard
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - sabnzbd.labmatt.com
      secretName: sabnzbd-tls
  rules:
  - host: sabnzbd.labmatt.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sabnzbd-standard
            port:
              number: 8080
